[tool.poetry]
name = "loop-engage-upload"
version = "0"
description = "Upload data from Engage to Loop"
license = "MIT"
authors = ["Kristaps Berzinch <kristaps@berzin.ch>"]
repository = "https://github.com/RoboJackets/loop-engage-upload"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"
selenium = "4.25.0"
webdriver-manager = "4.0.2"
werkzeug = "3.0.4"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.2"
black = "24.10.0"
flake8 = "7.1.1"
flake8-black = "0.3.6"
flake8-bugbear = "24.8.19"
flake8-import-order = "0.18.2"
mypy = "1.12.1"
pylint = "3.3.1"

[tool.poetry.scripts]
engage-upload = 'loop_engage_upload:main'

[tool.black]
line-length = 120
target-version = ['py38']

[tool.pylint.basic]
disable = ["line-too-long,logging-fstring-interpolation,unused-variable,wrong-import-order"]

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 120

[tool.pylint.variables]
allow-global-unused-variables = false

[tool.mypy]
disallow_untyped_calls = false

[build-system]
requires = ["poetry_core==1.9.1"]
build-backend = "poetry.core.masonry.api"
